# ffmpeg_gui

./: .gitignore  .gitmodules  CMakeLists.txt  Entry.cpp  Entry.h  Form.cpp  Form.h  README.md  Settings.cpp  Settings.h  build_config.h.in  codecs.json  config.cpp  config.h  ffmpeg_gui.cmb  lib.cpp  lib.h  main.cpp  main.ui
xdg/: CMakeLists.txt  xdg.cpp  xdg.h
